# vlm-control-sim

./: .gitignore  README.md  README_tmp.html  any_robots.py  demo_player.py  llm_providers.py  main.py  modify.py  openai_llm.py  prompt.txt  prompt_twins.txt  pyproject.toml  rag_best.csv  settings.py  sim_phrases.py  wb_twins.py
best/: boxing.json  claps.json  comehere.json  gojawsmb.json  hands_horizontally_forward_palms down.json  hands_zero_palms down.json  keyboard.json  okay.json  replacebothboxes.json  replacebox.json  replaceredbox.json  salut.json  signquiet.json  tothesky.json  up.json  wave.json  waveboth.json  yuhwqzkr.json
g1-rag/: bring.json  ex.json  hand-horizont-forward.json  t-pose.json  up-hand-vertical.json  updown.json
unitree_rl_gym/: g1.txt
unitree_rl_gym/resources/robots/g1/: g1.xml  g1_12dof.xml  g1_43dof copy.xml  g1_43dof.xml  g1_full.xml  scene.xml  scene_env.xml  scene_room.xml  scene_sphere.xml
unitree_rl_gym/resources/robots/g1/meshes/: r1-logo.stl  r2-logo.stl
unitree_rl_gym/resources/robots/h1_2/: h1_2.xml  h1_2_12dof.xml  h1_2_full.xml  scene.xml  scene_room.xml
unitree_rl_gym/resources/robots/h1_2/meshes/: R1-label.stl
