[project]
name = "any-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio>=2.37.0",
    "mujoco>=3.3.6",
    "numpy==2.2.3",
    "openai>=2.1.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
]
